feat: add precise concurrency level control for latency benchmark
Add start-from-level and stop-at-level parameters to latency benchmark:
- LAT_START_FROM_LEVEL: 16 (start testing from level 16)
- LAT_STOP_AT_LEVEL: 16 (stop testing at level 16)

Benefits:
- Only test concurrency level 16 instead of 1-16 range
- Reduce testing time and focus on target concurrency
- Avoid potential issues from low concurrency levels
- More precise and efficient benchmark execution

Command line parameters added:
--start-from-level ${LAT_START_FROM_LEVEL}
--stop-at-level ${LAT_STOP_AT_LEVEL}

Log output updated to show actual testing range:
'Parameters: 16 max concurrency (testing level 16-16), 120s duration'

--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -885,6 +885,10 @@ jobs:
                   # Latency benchmark parameters
                   - name: LAT_MAX_CONCURRENCY
                     value: "16"
+                  - name: LAT_START_FROM_LEVEL
+                    value: "16"
+                  - name: LAT_STOP_AT_LEVEL
+                    value: "16"
                   - name: LAT_DURATION
                     value: "120"
                   - name: LAT_WARMUP
