feat: enhance benchmark-summary as final checkpoint with failure control
Transform benchmark-summary from passive reporting to active validation:

Current improvements:
- Add proper exit 1 when any benchmark fails (FAILED status)
- Add proper exit 1 when benchmark errors occur (ERROR/UNKNOWN status)
- Provide detailed failure information with specific failed benchmarks
- Maintain comprehensive summary table and Lark notifications

Flow control:
- ✅ All PASSED → workflow succeeds
- ❌ Any FAILED → workflow fails with detailed error info
- ❌ Any ERROR/UNKNOWN → workflow fails with status details

Benefits:
- True final checkpoint that enforces benchmark success
- Clear failure reporting with specific benchmark identification
- Maintains useful summary reporting and notifications
- Prevents false positive workflow completion

--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -1190,10 +1190,23 @@ jobs:
           
           if [ "$BROADCAST_STATUS" = "PASSED" ] && [ "$LATENCY_STATUS" = "PASSED" ]; then
             echo "### ✅ Overall Result: ALL BENCHMARKS PASSED" >> $GITHUB_STEP_SUMMARY
+            echo "✅ All benchmarks passed successfully"
           elif [ "$BROADCAST_STATUS" = "FAILED" ] || [ "$LATENCY_STATUS" = "FAILED" ]; then
             echo "### ⚠️  Overall Result: SOME BENCHMARKS FAILED" >> $GITHUB_STEP_SUMMARY
+            echo "❌ Benchmark failure detected:"
+            if [ "$BROADCAST_STATUS" = "FAILED" ]; then
+              echo "  - Broadcast Latency: FAILED"
+            fi
+            if [ "$LATENCY_STATUS" = "FAILED" ]; then
+              echo "  - Latency: FAILED"
+            fi
+            exit 1
           else
             echo "### ❌ Overall Result: BENCHMARK ERRORS OCCURRED" >> $GITHUB_STEP_SUMMARY
+            echo "❌ Benchmark errors occurred:"
+            echo "  - Broadcast Status: $BROADCAST_STATUS"
+            echo "  - Latency Status: $LATENCY_STATUS"
+            exit 1
           fi
           
           echo "" >> $GITHUB_STEP_SUMMARY
