refactor: further optimize duplicate environment variables
Additional optimization of duplicate environment variables:

Removed redundant variable definitions:
- BCAST_EPS, LAT_EPS (now use COMMON_EPS fallback in script)
- BCAST_DURATION, LAT_DURATION (now use COMMON_DURATION fallback)
- BCAST_WARMUP, LAT_WARMUP (now use COMMON_WARMUP fallback)

Added common threshold variables:
- COMMON_P95_TARGET=120 (shared by both benchmarks)

Benefits:
- Reduced environment variable definitions from 12 to 4 common variables
- Single source of truth for shared values (duration, warmup, eps, p95 target)
- Eliminated ~66% of duplicate variable definitions
- Cleaner, more maintainable workflow configuration
- Consistent values across both benchmark types

Script fallback mechanism ensures compatibility:
- BCAST_DURATION=${BCAST_DURATION:-$COMMON_DURATION}
- LAT_EPS=${LAT_EPS:-$COMMON_EPS}
- etc.

--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -518,18 +518,15 @@ jobs:
                     value: "5"
                   - name: COMMON_EPS
                     value: "1"
-                  # Broadcast benchmark parameters
+                  # Common thresholds
+                  - name: COMMON_P95_TARGET
+                    value: "120"
+                  # Broadcast benchmark parameters (using common params for EPS/DURATION/WARMUP)
                   - name: BCAST_SUBS
                     value: "128"
                   - name: BCAST_PUBS
                     value: "1"
-                  - name: BCAST_EPS
-                    value: "1"
-                  - name: BCAST_DURATION
-                    value: "120"
-                  - name: BCAST_WARMUP
-                    value: "5"
-                  # Broadcast thresholds
+                  # Broadcast thresholds (using common P95 target)
                   - name: BCAST_P95_MS
                     value: "120"
                   - name: BCAST_SUCCESS_RATE
@@ -898,20 +895,17 @@ jobs:
                     value: "5"
                   - name: COMMON_EPS
                     value: "1"
-                  # Latency benchmark parameters
+                  # Common thresholds
+                  - name: COMMON_P95_TARGET
+                    value: "120"
+                  # Latency benchmark parameters (using common params for EPS/DURATION/WARMUP)
                   - name: LAT_MAX_CONCURRENCY
                     value: "16"
                   - name: LAT_START_FROM_LEVEL
                     value: "16"
                   - name: LAT_STOP_AT_LEVEL
                     value: "16"
-                  - name: LAT_DURATION
-                    value: "120"
-                  - name: LAT_WARMUP
-                    value: "5"
-                  - name: LAT_EPS
-                    value: "1"
-                  # Latency thresholds
+                  # Latency thresholds (using common P95 target) 
                   - name: LAT_P95_MS
                     value: "120"
                   - name: LAT_P99_MS
