--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -516,7 +516,8 @@ jobs:
                     value: "120"
                   - name: COMMON_WARMUP
                     value: "5"
-                  - name: COMMON_EPS
+                  # Broadcast-specific parameters  
+                  - name: BCAST_EPS
                     value: "1"
                   # Common thresholds
                   - name: COMMON_P95_TARGET
@@ -694,17 +695,17 @@ jobs:
               echo "📝 JSON metrics not available, parsing from logs..."
               # Extract key metrics from logs using grep and awk  
               success_rate=$(grep -o "Success Rate: [0-9.]*%" broadcast-benchmark.log | tail -1 | grep -o "[0-9.]*" || echo "0")
-              p95_latency=$(grep -o "P95 Latency: [0-9.]*ms" broadcast-benchmark.log | tail -1 | grep -o "[0-9.]*" || echo "0")
+              p95_latency=$(grep "P95 Latency: [0-9.]*ms" broadcast-benchmark.log | tail -1 | sed 's/.*: \([0-9.]*\)ms.*/\1/' || echo "0")
               avg_latency=$(grep -o "Avg Latency: [0-9.]*ms" broadcast-benchmark.log | tail -1 | grep -o "[0-9.]*" || echo "0")
               throughput=$(grep -o "Throughput: [0-9.]* events/sec" broadcast-benchmark.log | tail -1 | grep -o "[0-9.]*" || echo "0")
             fi
             
-            # Use environment variables directly instead of parsing logs
+            # Use broadcast-specific parameters
             subscribers="128"
             publishers="1" 
-            duration="120"  # Using common duration value
-            eps="1"         # Using common EPS value
-            warmup="5"      # Using common warmup value
+            duration="120"
+            eps="1"    # From BCAST_EPS
+            warmup="5"
             
             # Set thresholds
             success_rate_target="90.0"
@@ -741,9 +742,17 @@ jobs:
               echo "**Issues:** $fail_reasons" >> $GITHUB_STEP_SUMMARY
             fi
             echo "" >> $GITHUB_STEP_SUMMARY
+            
+            # Update status output for benchmark-summary (broadcast)
+            if [ "$pass_status" = "✅ PASSED" ]; then
+              echo "status=PASSED" >> $GITHUB_OUTPUT
+            else
+              echo "status=FAILED" >> $GITHUB_OUTPUT
+            fi
           else
             echo "❌ **No benchmark results available**" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
+            echo "status=ERROR" >> $GITHUB_OUTPUT
           fi
           
           # Add execution details
@@ -893,7 +902,8 @@ jobs:
                     value: "120"
                   - name: COMMON_WARMUP
                     value: "5"
-                  - name: COMMON_EPS
+                  # Latency-specific parameters
+                  - name: LAT_EPS
                     value: "10"
                   # Common thresholds
                   - name: COMMON_P95_TARGET
@@ -1079,17 +1089,17 @@ jobs:
               echo "📝 JSON metrics not available, parsing from logs..."
               # Extract metrics from logs using various patterns
               success_status=$(grep -o "✅ SUCCESS\|❌ FAILED" latency-benchmark.log | tail -1 || echo "UNKNOWN")
-              p95_latency=$(grep -o "P95 Latency: [0-9.]*ms\|P95: [0-9.]*ms" latency-benchmark.log | tail -1 | sed 's/.*: \([0-9.]*\)ms.*/\1/' || echo "0")
-              p99_latency=$(grep -o "P99 Latency: [0-9.]*ms\|P99: [0-9.]*ms" latency-benchmark.log | tail -1 | sed 's/.*: \([0-9.]*\)ms.*/\1/' || echo "0")
+              p95_latency=$(grep "P95 Latency: [0-9.]*ms\|P95: [0-9.]*ms" latency-benchmark.log | tail -1 | sed 's/.*: \([0-9.]*\)ms.*/\1/' || echo "0")
+              p99_latency=$(grep "P99 Latency: [0-9.]*ms\|P99: [0-9.]*ms" latency-benchmark.log | tail -1 | sed 's/.*: \([0-9.]*\)ms.*/\1/' || echo "0")
               throughput=$(grep -o "Throughput: [0-9.]* events/sec\|ActualThroughput.*[0-9.]*" latency-benchmark.log | tail -1 | grep -o "[0-9.]*" || echo "0")
               processed_ratio=$(grep -o "Processed Ratio: [0-9.]*%\|processed.*[0-9.]*%" latency-benchmark.log | tail -1 | grep -o "[0-9.]*" || echo "0")
             fi
             
-            # Use environment variables directly instead of parsing logs
+            # Use environment variables directly from COMMON_EPS in job
             max_concurrency="16"
-            duration="120"  # Using common duration value  
-            eps="10"        # Using common EPS value
-            warmup="5"      # Using common warmup value
+            duration="120"
+            eps="10"  # From COMMON_EPS env var
+            warmup="5"
             
             # Set thresholds
             p95_target="120"
@@ -1101,14 +1111,6 @@ jobs:
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "| Metric | Value | Target |" >> $GITHUB_STEP_SUMMARY
             echo "|--------|-------|--------|" >> $GITHUB_STEP_SUMMARY
-            
-            # Status row
-            if [ "$success_status" = "✅ SUCCESS" ]; then
-              echo "| Status | ✅ SUCCESS | ✅ SUCCESS |" >> $GITHUB_STEP_SUMMARY
-            else
-              echo "| Status | ❌ FAILED | ✅ SUCCESS |" >> $GITHUB_STEP_SUMMARY
-            fi
-            
             echo "| Throughput | ${throughput} events/sec | ≥90.0% of expected |" >> $GITHUB_STEP_SUMMARY
             echo "| P95 Latency | ${p95_latency}ms | ≤${p95_target}ms |" >> $GITHUB_STEP_SUMMARY
             echo "| P99 Latency | ${p99_latency}ms | (no target, max: ${p99_target}ms) |" >> $GITHUB_STEP_SUMMARY
@@ -1145,9 +1147,17 @@ jobs:
               echo "**Issues:** $fail_reasons" >> $GITHUB_STEP_SUMMARY
             fi
             echo "" >> $GITHUB_STEP_SUMMARY
+            
+            # Update status output for benchmark-summary (latency)
+            if [ "$pass_status" = "✅ PASSED" ]; then
+              echo "status=PASSED" >> $GITHUB_OUTPUT
+            else
+              echo "status=FAILED" >> $GITHUB_OUTPUT
+            fi
           else
             echo "❌ **No benchmark results available**" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
+            echo "status=ERROR" >> $GITHUB_OUTPUT
           fi
           
           # Add execution details
