--- a/station/src/Aevatar.Sandbox.HttpApi.Host/appsettings.json
+++ b/station/src/Aevatar.Sandbox.HttpApi.Host/appsettings.json
@@ -15,14 +15,18 @@
   },
   "Orleans": {
     "ClusterId": "AevatarSiloCluster",
-    "ServiceId": "AevatarOrleansBasicService",
+    "ServiceId": "AevatarBasicService",
     "MongoDBClient": "mongodb://localhost:27017/?maxPoolSize=555",
-    "AdoNetConnectionString": "mongodb://localhost:27017/?maxPoolSize=555"
+    "DataBase": "AevatarDb"
   },
   "Kubernetes": {
     "InCluster": false,
     "KubeConfig": "~/.kube/config",
     "Namespace": "sandbox"
+  },
+  "Host": {
+    "HostId": "Aevatar",
+    "Version": "Version"
   },
   "Sandbox": {
     "Python": {
