--- a/station/src/Aevatar.Silo/appsettings.json
+++ b/station/src/Aevatar.Silo/appsettings.json
@@ -244,6 +244,9 @@
       "CollectionNamingStrategy": "FullTypeName",
       "BatchSize": 100,
       "QueryTimeoutMs": 30000
+    },
+    "MigrationMode": {
+      "Enabled": true
     }
   },
   "ZooKeeper": {
