--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -196,6 +196,7 @@
     <PackageVersion Include="OrleansDashboard" Version="8.2.0" />
     <PackageVersion Include="AutoResponseWrapper" Version="1.1.3" />
     <PackageVersion Include="System.Text.Json" Version="9.0.0" />
+    <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0" />
     <PackageVersion Include="OpenIddict.Server.AspNetCore" Version="5.5.0" />
     <PackageVersion Include="StackExchange.Redis" Version="2.7.27" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
