--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,9 +7,9 @@
     <AevatarGAgentVersion>1.5.4</AevatarGAgentVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="GodGPT.GAgents" Version="1.27.2" />
+    <PackageVersion Include="GodGPT.GAgents" Version="1.27.0-alpha-testnet-1" />
     <PackageVersion Include="Stripe.net" Version="48.1.0"/>
-    <PackageVersion Include="GodGPT.Webhook" Version="1.27.2" />
+    <PackageVersion Include="GodGPT.Webhook" Version="1.27.0-alpha-testnet-1" />
     <!-- AElf packages -->
     <PackageVersion Include="AElf.Client" Version="1.1.0" />
     <PackageVersion Include="AElf.ExceptionHandler.ABP" Version="8.2.8" />
