--- a/station/src/Aevatar.Sandbox.HttpApi.Host/appsettings.json
+++ b/station/src/Aevatar.Sandbox.HttpApi.Host/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AuthServer": {
     "Authority": "https://localhost:44301",
-    "RequireHttpsMetadata": "true",
+    "RequireHttpsMetadata": "false",
     "SwaggerClientId": "Sandbox_Swagger"
   },
   "Orleans": {
