--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -118,8 +118,8 @@ jobs:
           -H "Content-Type: application/x-www-form-urlencoded" \
           -H "Accept: application/json" \
           --data-urlencode "grant_type=client_credentials" \
-          --data-urlencode "client_id=${{ secrets.GODGPTTEST_CLIENT_ID }}" \
-          --data-urlencode "client_secret=${{ secrets.GODGPTTEST_CLIENT_SECRET }}" \
+          --data-urlencode "client_id=${{ secrets.GOD_CLIENT_ID }}" \
+          --data-urlencode "client_secret=${{ secrets.GOD_CLIENT_SECRET }}" \
           --data-urlencode "scope=Aevatar")
           echo "Response: $response"
           token=$(echo $response | jq -r '.access_token')
